# livekit-evals

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  test_import.py
.github/workflows/: publish.yml
examples/: README.md  basic_agent.py  realtime_model_agent.py
livekit_evals/: __init__.py  config.py  recording_manager.py  webhook_handler.py
